; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/imageio/extr_webpdec.c_DecodeWebPIncremental.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/imageio/extr_webpdec.c_DecodeWebPIncremental.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VP8_STATUS_OK = common dso_local global i32 0, align 4
@VP8_STATUS_INVALID_PARAM = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Failed during WebPINewDecoder().\0A\00", align 1
@VP8_STATUS_OUT_OF_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DecodeWebPIncremental(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32, i32* @VP8_STATUS_OK, align 4
  store i32 %10, i32* %8, align 4
  %11 = load i32*, i32** %7, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @VP8_STATUS_INVALID_PARAM, align 4
  store i32 %14, i32* %4, align 4
  br label %37

15:                                               ; preds = %3
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @PrintAnimationWarning(i32* %16)
  %18 = load i32*, i32** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32* @WebPIDecode(i32* %18, i64 %19, i32* %20)
  store i32* %21, i32** %9, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %28

24:                                               ; preds = %15
  %25 = load i32, i32* @stderr, align 4
  %26 = call i32 @fprintf(i32 %25, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %27 = load i32, i32* @VP8_STATUS_OUT_OF_MEMORY, align 4
  store i32 %27, i32* %4, align 4
  br label %37

28:                                               ; preds = %15
  %29 = load i32*, i32** %9, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i64, i64* %6, align 8
  %32 = call i32 @WebPIUpdate(i32* %29, i32* %30, i64 %31)
  store i32 %32, i32* %8, align 4
  %33 = load i32*, i32** %9, align 8
  %34 = call i32 @WebPIDelete(i32* %33)
  br label %35

35:                                               ; preds = %28
  %36 = load i32, i32* %8, align 4
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %35, %24, %13
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @PrintAnimationWarning(i32*) #1

declare dso_local i32* @WebPIDecode(i32*, i64, i32*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @WebPIUpdate(i32*, i32*, i64) #1

declare dso_local i32 @WebPIDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
